--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "element-ui": "^2.15.1",
     "jquery": "^3.6.0",
     "js-beautify": "^1.13.5",
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
