--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.2.4",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
